# probatepilot

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
agent/: .env.example  README.md  constants.py  pyproject.toml
agent/agents/: deadline_agent.py
agent/api/routers/: auth.py  chat.py  estates.py
agent/documents/: pdf_reader.py  router.py
agent/evals/: deadline_next_steps_quality.py
agent/llm/: claude.py  embeddings.py
agent/observability/: phoenix.py
agent/prompts/: letters.py  system.py
agent/researcher/: __init__.py  research_agent.py
agent/rules/: california_probate.py
agent/schemas/: api.py  auth.py  documents.py  estate.py
agent/seed/: demo_estate.py
agent/store/: redis_client.py
agent/store/backends/: memory_vectors.py
agent/tests/: conftest.py  test_california_probate_rules.py  test_chat_rag.py  test_deadline_agent.py  test_letter_generation.py  test_observability.py  test_research_agent.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/assets/: SCREENSHOTS.md
examples/: README.md
examples/demo-uploads/: generate_docs.py
tests/: conftest.py
web/: README.md  package-lock.json  package.json
web/app/: global-error.tsx  globals.css
web/components/screens/: LettersScreen.tsx  NotificationsMenu.tsx
