[project]
name = "probatepilot-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # AI
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # Observability
    "arize-phoenix-otel",
    "arize-phoenix-client",
    "arize-phoenix-evals",
    "openinference-instrumentation-anthropic>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "opentelemetry-sdk>=1.42.1",

    # Data & validation
    "pydantic>=2.7.0",
    "email-validator>=2.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",

    # Auth
    "bcrypt>=4.0.0",

    # Document processing
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.16.0",

    # Redis
    "redis>=5.0.0",
    "upstash-redis>=1.0.0",
    "upstash-vector>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by formatting judgment, not a hard rule, in this codebase
    "B008",  # FastAPI's Depends()/Header() are meant to be called in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"main.py" = ["E402"]  # load_dotenv() must run before the other imports below it
